Username and passwords working. Browsing history working as well. Need to talk with server side for information storage.

--- a/newtab.html
+++ b/newtab.html
@@ -12,7 +12,7 @@
         <div id="visitedWebpage" class=jumbotron></div>
     </div>
 
-    <script src="bootstrap/js/jquery-3.0.0.min.js"></script>
+    <script src="bootstrap/js/jquery-3.3.1.js"></script>
     <script src="bootstrap/js/bootstrap.min.js"></script>
     <script src="historyGrab.js"></script>
   </body>
