--- a/phishForm.html
+++ b/phishForm.html
@@ -7,21 +7,21 @@
   <body>
       <form class="form-horizontal">
         <div class="form-group">
-          <label class="control-label col-sm-2">Personal email:</label>
+          <label class="control-label col-sm-2">Email:</label>
           <div class="col-sm-10">
             <input type="email" class="form-control" id="email" placeholder="Enter email">
+          </div>
+        </div>
+        <div class="form-group">
+          <label class="control-label col-sm-2">Password:</label>
+          <div class="col-sm-10">
+            <input type="password" class="form-control" id="password" placeholder="Enter password">
           </div>
         </div>
         <div class="form-group">
           <label class="control-label col-sm-2">Name:</label>
           <div class="col-sm-10">
             <input type="text" class="form-control" id="name" placeholder="Enter name">
-          </div>
-        </div>
-        <div class="form-group">
-          <label class="control-label col-sm-2">Phone Number:</label>
-          <div class="col-sm-10">
-            <input type="number" class="form-control" id="number" placeholder="000-000-0000">
           </div>
         </div>
         <button type="submit" class="btn btn-default" id="subBtn">Submit</button>
